--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-ssafy-meoseon",
-	"version": "1.0.0",
+	"version": "0.0.1",
 	"description": "ssafy meoseon e-commerce extensions pack for Node-RED",
 	"keywords": [
 		"node-red",
@@ -16,11 +16,17 @@
 	},
 	"node-red": {
 		"nodes": {
-			"NaverBooks": "Meoseon/Meoseon-NaverBooks.js",
-			"Ship": "Meoseon/Meoseon-Ship.js"
+			"11st-shopping": "Meoseon/11st-shopping.js",
+			"Aladin": "Meoseon/Aladin.js",
+			"Meoseon-NaverBooks": "Meoseon/Meoseon-NaverBooks.js",
+			"Meoseon-Ship": "Meoseon/Meoseon-Ship.js",
+			"NaverShopping": "Meoseon/NaverShopping.js",
+			"shopping-filter": "Meoseon/shopping-filter.js"
 		}
 	},
 	"dependencies": {
-		"axios": "^0.22.0"
+		"axios": "^0.22.0",
+		"iconv-lite": "^0.6.3",
+		"xml-js": "^1.6.11"
 	}
 }
