--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-ssafy-meoseon",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "ssafy meoseon e-commerce extensions pack for Node-RED",
   "keywords": [
     "node-red",
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "iconv-lite": "^0.6.3",
+    "mustache": "^4.2.0",
     "xml-js": "^1.6.11"
   }
 }
