--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-ssafy-meoseon",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "ssafy meoseon e-commerce extensions pack for Node-RED",
   "keywords": [
     "node-red",
@@ -29,6 +29,8 @@
     "axios": "^0.22.0",
     "iconv-lite": "^0.6.3",
     "mustache": "^4.2.0",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "he": "1.2.0",
+    "fast-xml-parser": "3.19.0"
   }
 }
