--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "node-red-contrib-ssafy-meoseon",
-	"version": "0.0.21",
+	"version": "0.0.22",
 	"description": "ssafy meoseon e-commerce extensions pack for Node-RED",
 	"keywords": [
 		"node-red",
@@ -16,11 +16,12 @@
 	},
 	"node-red": {
 		"nodes": {
-			"Aladin": "Meoseon/Aladin.js",
+			"Aladin": "Meoseon/Meoseon-Aladin.js",
 			"Meoseon-NaverBooks": "Meoseon/Meoseon-NaverBooks.js",
 			"Meoseon-Ship": "Meoseon/Meoseon-Ship.js",
-			"shopping-filter": "Meoseon/shopping-filter.js",
-			"Shopping": "Meoseon/Meoseon-Shopping.js"
+			"shopping-filter": "Meoseon/Meoseon-Shopping-Filter.js",
+			"Shopping": "Meoseon/Meoseon-Shopping.js",
+			"References": "Meoseon/Meoseon-References.js"
 		}
 	},
 	"dependencies": {
